# DBZ

./: .env  .gitignore  Registration Forms  (Responses) - Form Responses 1.csv  Test Sheet Nov 28 7 PM.csv  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/db/: db.rs  mod.rs  practice.rs  user.rs
backend/src/jobs/: mod.rs  practice.rs  scheduler.rs
backend/src/logging/: middleware.rs  mod.rs
backend/src/router/: mod.rs  requests.rs  responses.rs  router.rs
backend/src/sheets/: mod.rs  models.rs  sheets.rs
discord-bot/: Dockerfile  api_server.py  main.py  models.py  requirements.txt  responses.py
frontend/: Dockerfile  package-lock.json
