[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
mongodb = "3.1.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
