[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.7.9"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
dotenv = "0.15.0"
futures = "0.3.31"
google-sheets4 = "6.0.0"
hyper = { version = "1.5.1", features = ["client"] }
hyper-rustls = "0.27.3"
mongodb = "3.1.0"
reqwest = { version = "0.12.9", features = ["json"] }
rustls = { version = "0.23.18", features = ["aws_lc_rs", "ring"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.13.0"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
yup-oauth2 = "11.0.0"
